--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -1,7 +1,7 @@
 // sass-lint:disable mixins-before-declarations
 
-$featureImgWidth: 202px;
-$featureImgHeight: 143px;
+$featureImgWidth: 200px;
+$featureImgHeight: 120px;
 $featureImgMobileWidth: 345px;
 $featureImgMobileHeight: 223px;
 $sidenav-bg: #f5f5f5;
@@ -17,6 +17,9 @@ $enrolled-passed-bg: #3E775D;
 $enrolled-passed-fg: #ffffff;
 
 .enrolled-items {
+  a {
+    color: $footer-blue-bg;
+  }
   .hide-element {
     // hidden elements for screenreaders only
     border: 0;
@@ -36,7 +39,7 @@ $enrolled-passed-fg: #ffffff;
       flex-direction: column;
 
       a {
-        color: black;
+        color: $footer-blue-bg;
         text-decoration: underline;
       }
 
@@ -46,18 +49,19 @@ $enrolled-passed-fg: #ffffff;
     }
 
     h2 {
-      font-size: 26px;
-      line-height: 27px;
-    }
+      font-size: 20px;
+      line-height: 20px;
+      margin: 0;
 
-    h2 a {
-      color: black;
-      text-decoration: none;
-
-      &:hover{
-        text-decoration: underline;
+      a {
+        text-decoration: none;
+  
+        &:hover{
+          text-decoration: underline;
+        }
       }
     }
+
     h5 a {
       text-decoration: none;
       &:hover{
@@ -84,14 +88,26 @@ $enrolled-passed-fg: #ffffff;
       width: $featureImgWidth;
       height: 100%;
       overflow: hidden;
+      border-radius: 5px; 
 
       img {
-        width: 100%;
-        height: 100%;
+        width: $featureImgWidth;
+        max-height: $featureImgHeight;
         display: block;
         object-fit: cover;
       }
     }
+
+    div.detail {
+      padding: 0;
+      margin-top: 20px;
+      line-height: 16px;
+
+      &.detail-program {
+        margin-top: 0;
+      }
+    }
+
 
     .detail {
       color: $gray;
@@ -109,6 +125,11 @@ $enrolled-passed-fg: #ffffff;
   button.dot-menu {
     // Setting height so the button element doesn't expand to cover the full height of the row
     height: $material-icon-height;
+  }
+
+  .certificate-container {
+    margin: 0;
+    padding: 0;
   }
 
   .unenroll-denied-msg .tooltip {
@@ -153,25 +174,32 @@ $enrolled-passed-fg: #ffffff;
   }
 
   .upgrade-item-description {
-    background-color: #F6F6F6;
-    padding: 15px;
     width: 100%;
     flex-direction: row;
-    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.24), inset -1px 0 0 0 rgba(0,0,0,0.07), inset 1px 0 0 0 rgba(0,0,0,0.07);
+    padding: 20px 30px;
+    border-top: $home-page-border-grey;
+    background: $home-page-grey-lite;
+
+    div.certificate-upgrade-message {
+      width: 80%;
+      font-size: 16px;
+      line-height: 30px;
+
+      strong {
+        color: $brand-darker-bg;
+      }
+    }
   }
 
   .enrollment-extra-links {
-    margin-top: .5rem;
-    font-size: smaller;
+    margin-top: 20px;
 
     a {
       text-decoration: underline;
-      color: $light-gray;
       margin: auto 0;
     }
 
     a:hover {
-      color: black;
       text-decoration: none;
     }
 
@@ -205,11 +233,17 @@ $enrolled-passed-fg: #ffffff;
       }
     }
   }
+
+}
+
+.dashboard {
+  font-family: "Inter", sans-serif;
 }
 
 .dashboard .tabs {
-  margin-bottom: 38px;
-  font-size: 38px;
+  margin-bottom: 0;
+  font-size: 20px;
+  line-height: 20px;
 
   @include media-breakpoint-down(md) {
     margin-bottom: 30px;
@@ -218,12 +252,11 @@ $enrolled-passed-fg: #ffffff;
 
 .dashboard button.dash-tab {
   border: 0;
-  font-weight: bold;
-  font-size: 75%;
-  margin-right: 3em;
   background: transparent;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 20px;
+  color: $dashboard-tab-inactive;
+  margin-right: 30px;
+  font-weight: 700;
 
   @include media-breakpoint-down(sm) {
     margin-right: 1em;
@@ -232,6 +265,7 @@ $enrolled-passed-fg: #ffffff;
 
 .dashboard button.dash-tab.active {
   border-bottom: 3px solid $primary !important;
+  color: $footer-blue-bg;
 }
 
 .modal-title {
