--- a/frontend/public/scss/cards.scss
+++ b/frontend/public/scss/cards.scss
@@ -141,7 +141,6 @@ div.std-card {
                 }
 
                 span {
-                    font-family: "Source Sans Pro", sans-serif;
                     font-size: 14px;
                 }
             }
@@ -184,8 +183,7 @@ div.std-card {
         }
 
         input {
-            padding-left: .5em;
-            padding-right: .5em;
+            padding: 17px 15px 18px;
         }
 
         input[type=checkbox] {
