--- a/cms/templates/flexiblepricing/flexible_pricing_request_form.html
+++ b/cms/templates/flexiblepricing/flexible_pricing_request_form.html
@@ -6,14 +6,14 @@
 {% block title %}{{ site_name }} | {{ page.title }}{% endblock %}
 
 {% block content %}
-<div id="main" class="main-page-content financial-assistance-page">
+<div id="main" class="main-page-content">
+  <div role="banner" class="std-page-header">
+    <h1>{{ page.title|richtext }}</h1>
+  </div>
+
   {% if user.is_authenticated %}{# is logged in #}
     {% if prior_request is None or prior_request.is_reset %}{# has submission #}
-      <div role="banner" class="std-page-header">
-        <h1>{{ page.title|richtext }}</h1>
-      </div>
       <div class="std-page-body">
-
         <div class="std-card std-card-finasst">
           <div class="std-card-body">
             {{ page.intro|richtext }}
@@ -21,7 +21,7 @@
         </div>
         <div class="container auth-page">
           <div class="std-card std-card-auth">
-            <div class="std-card-body">
+            <div class="std-card-body financial-assistance-page">
               <h1 class="tell-us-about-your-income">Tell us about your income</h1>
               <form action="{% pageurl page %}" method="POST">
                 {% csrf_token %}
@@ -69,45 +69,56 @@
       </div>
     {% else %}
       {% if prior_request.is_approved %}{# request status #}
-        {% if prior_request.tier.discount.amount == 0 %}{# discount amount text #}
-        <div class="flexible-pricing-head">
-          {{ page.application_approved_no_discount_text|richtext }}
-        </div>
-        {% else %}
-        <div class="flexible-pricing-head">
-          {{ page.application_approved_text|richtext }}
-        </div>
-        {% endif %}{# end discount amount text #}
-
-          {% if page.selected_course %}
-            {% if product %}{# product and unexpired course run exist #}
-              <form action="/cart/add" method="get" class="text-center">
-                <input type="hidden" name="product_id" value={{ product.id }} />
-                <button
-                  type="submit"
-                  class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
-                  Get Certificate
-                </button>
-              </form>
+      <div class="std-page-body">
+        <div class="std-card std-card-finasst">
+          <div class="std-card-body financial-assistance-page">
+            {% if prior_request.tier.discount.amount == 0 %}{# discount amount text #}
+              {{ page.application_approved_no_discount_text|richtext }}
             {% else %}
-              <a href="{{ product_page }}" class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
-                Course details
+              {{ page.application_approved_text|richtext }}
+            {% endif %}{# end discount amount text #}
+
+            {% if page.selected_course %}
+              {% if product %}{# product and unexpired course run exist #}
+                <form action="/cart/add" method="get" class="text-center">
+                  <input type="hidden" name="product_id" value={{ product.id }} />
+                  <button
+                    type="submit"
+                    class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
+                    Get Certificate
+                  </button>
+                </form>
+              {% else %}
+                <a href="{{ product_page }}" class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
+                  Course details
+                </a>
+              {% endif %}
+            {% elif page.selected_program %}
+              <a href="/dashboard" class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
+              Go to Dashboard
               </a>
             {% endif %}
-          {% elif page.selected_program %}
-            <a href="/dashboard" class="btn btn-primary btn-gradient-red flexible-price-certificate-btn">
-            Go to Dashboard
-            </a>
-          {% endif %}
+          </div>
+        </div>
+      </div>
+
 
 
       {% elif prior_request.is_denied %}
-        <div class="flexible-pricing-head">
-          {{ page.application_denied_text|richtext }}
+        <div class="std-page-body">
+          <div class="std-card std-card-finasst">
+            <div class="std-card-body financial-assistance-page">
+              {{ page.application_denied_text|richtext }}
+            </div>
+          </div>
         </div>
       {% else %}
-        <div class="flexible-pricing-head">
-          {{ page.application_processing_text|richtext }}
+        <div class="std-page-body">
+          <div class="std-card std-card-finasst">
+            <div class="std-card-body financial-assistance-page">
+              {{ page.application_processing_text|richtext }}
+            </div>
+          </div>
         </div>
       {% endif %}{# request status #}
     {% endif %}{# has submission #}
