--- a/frontend/public/scss/cart.scss
+++ b/frontend/public/scss/cart.scss
@@ -1,5 +1,21 @@
+.std-page-body.cart {
+  font-family: "Inter", sans-serif;
+
+  .row {
+    .col.summary-cards {
+      width: 424px !important;
+      margin: 0;
+      margin-left: 24px;
+    }
+  
+    .col.enrollment-items {
+      margin: 0;
+    }
+  }
+}
+
 .btn-primary.btn-halfsize {
-  	padding: .35rem 1.5rem;
+  padding: .35rem 1.5rem;
 	font-size: 14px;
 	line-height: 1.5rem;
 	border: 2px solid #a31f34
@@ -26,4 +42,30 @@
 a.history-paginators {
   padding-left: .25rem;
   padding-right: .25rem;
+}
+
+div.cart-helptext {
+  margin-bottom: 10px;
+  font-family: "Inter", sans-serif;
+
+  a {
+    color: $footer-blue-bg;
+  }
+}
+
+.order-summary.container.card {
+  padding: 30px !important;
+  border-radius: 5px;
+  background: #FFF;
+  /* Dropshadow */
+  box-shadow: 0px 2px 3px 0px rgba(18, 38, 49, 0.15); 
+
+  .coupon-form {
+    margin-top: 20px;
+
+    label.fw-bold {
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+  }
 }
