--- a/frontend/public/scss/cart.scss
+++ b/frontend/public/scss/cart.scss
@@ -30,7 +30,9 @@
 }
 
 .cart-text-smaller {
-  font-size: 80%;
+  font-size: 13px;
+  line-height: 35px;
+  margin-bottom: 0 !important;
 }
 
 .order-summary-total {
