--- a/frontend/public/scss/cards.scss
+++ b/frontend/public/scss/cards.scss
@@ -68,7 +68,7 @@ div.std-card {
             }
         }
 
-        h1 {
+        h1, h2 {
             font-size: 25px;
             font-weight: 600;
             margin-bottom: 25px;
