Updating some styling stuff
- Background color should be #f0f5f7 now (except where we set it to white, on the product pages)
- Title bars on pages that have them (Dashboard, etc.) should now be sticky on desktop
- Fixed the spacing on the course about page; the info box wasn't the right size and neither was the video-js canvas (was super simple)

--- a/frontend/public/scss/cards.scss
+++ b/frontend/public/scss/cards.scss
@@ -336,3 +336,9 @@ button.btn.btn-gradient-red-to-blue:hover, a.btn.btn-gradient-red-to-blue:hover 
     background: $home-page-header-blue !important;
 }
 
+@media only screen and (min-width: 767px) {
+    div.std-page-header {
+        position: sticky;
+        top: 0;
+    }
+}
