--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -34,6 +34,8 @@ $featured-banner-border: #5e0c19;
 
 $events-background: #e3e3e3;
 
+$body-bg: #f0f5f7;
+
 $footer-bg: #000000;
 $footer-border: #686461;
 $footer-blue-bg: #03152D;
