--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -44,7 +44,7 @@ body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   color: #000000;
-  background: #f5f5f5;
+  background: $body-bg;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
