--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -33,6 +33,92 @@ $enrolled-passed-fg: #ffffff;
     width: 1px;
   }
 
+  .card {
+    display: flex;
+    margin-bottom: 20px;
+    padding: 0;
+    box-shadow: 0px 2px 3px 0px rgba(18, 38, 49, 0.15); 
+    
+    &.no-enrollments {
+      flex-direction: column;
+
+      a {
+        color: black;
+        text-decoration: underline;
+      }
+
+      p {
+        margin: 0;
+      }
+    }
+
+    h2 {
+      font-size: 20px;
+      line-height: normal;
+    }
+
+    h2 a {
+      color: black;
+      text-decoration: none;
+
+      &:hover{
+        text-decoration: underline;
+      }
+    }
+    h5 a {
+      text-decoration: none;
+      &:hover{
+        text-decoration: underline;
+      }
+    }
+
+    div.row {
+      margin: 0 !important;
+      padding: 20px;
+    }
+
+    @include media-breakpoint-up(md) {
+      .row {
+        height: auto;
+
+        > * {
+          height: 100%;
+        }
+      }
+    }
+
+    .img-container {
+      @include media-breakpoint-down(sm)  {
+        width: 100%;
+        height: $featureImgMobileHeight;
+      }
+
+      width: $featureImgWidth;
+      height: 100%;
+      overflow: hidden;
+      border-radius: 5px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        display: block;
+        object-fit: cover;
+      }
+    }
+
+    .detail {
+      color: $gray;
+
+      strong {
+        color: $primary;
+      }
+    }
+
+    div.row.certificate-row {
+      padding: 0;
+    }
+  }
+
   .no-enrollments h2 {
     font-size: 25px !important;
     margin-bottom: 30px !important;
