--- a/frontend/public/scss/cards.scss
+++ b/frontend/public/scss/cards.scss
@@ -98,7 +98,7 @@ div.std-card {
             margin-bottom: 10px;
         }
 
-        input:active, input:focus, input:hover {
+        input:active, input:focus, input:hover, select:active, select:focus, select:hover {
             border: 1px solid $home-page-header-blue !important;
             box-shadow: none !important;
         }
@@ -126,6 +126,10 @@ div.std-card {
 
         div:last-child {
             margin-bottom: 0;
+        }
+
+        div.profile-student-type div.form-check {
+            margin-bottom: 10px;
         }
 
         div.form-group {            
@@ -176,6 +180,10 @@ div.std-card {
             div.col, div.col-6, div.col-5, div.col-4, div.col-3, div.col-2, div.col-1 {
                 margin-bottom: 0 !important;
             }
+        }
+
+        div.submit-row {
+            padding-top: 20px;
         }
 
         button {
@@ -345,10 +353,49 @@ div.std-card-body, div.enrolled-item, div.cart-helptext {
 }
 
 
-@media only screen and (min-width: 767px) {
+@media only screen and (min-width: 768px) {
     div.std-page-header {
         position: sticky;
         top: 0;
         z-index: 500;
     }
+
+    .d-sm-none {
+        display: block !important;
+    }
 }
+
+
+@media only screen and (max-width: 767px) {
+    div.std-card {
+        &.std-card-auth {
+            width: 100%;
+        }
+    
+        div.std-card-body {
+            &.edit-profile-page, &.create-account-page, &.my-account-page, &.financial-assistance-page, &.checkout-page {
+                label.label-helptext {
+                    display: flex;
+                    flex-direction: column !important;
+                    align-items: top;
+                    justify-items: stretch;
+                    margin-bottom: 0;
+
+                    div {
+                        width: 100%;
+                        margin-bottom: 0;
+                    }
+
+                    div.subtitle {
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    }
+
+    .d-sm-none {
+        display: none;
+    }
+}
+
