Remove homepage changes

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -1,11 +1,7 @@
 {% extends "base.html" %}
 
-{% load static wagtail_img_src feature_img_src wagtailmetadata_tags %}
+{% load static wagtail_img_src feature_img_src %}
 {% load wagtailcore_tags wagtailembeds_tags %}
-
-{% block seohead %}
-    {% meta_tags %}
-{% endblock%}
 
 {% block title %}{{ site_name }}{% endblock %}
 
