Fixes a few things and rebases from main:
- Fixed display issue for cart "You're about to buy" message thing (was messing with Bootstrap styles, now not)
- Learner record should look better on mobile now
- Learner record buttons should look/work more like the rest of them - these are still a bit out of kilter from normal, but this is on purpose
- School list dropdown on Send Learner Record modal should work better for voiceover
- Fixed mobile styling on the dashboard cards

--- a/frontend/public/scss/dashboard.scss
+++ b/frontend/public/scss/dashboard.scss
@@ -77,6 +77,16 @@ $enrolled-passed-fg: #ffffff;
       padding: 20px;
     }
 
+    @include media-breakpoint-down(sm)  {
+      div.row.enrolled-item-info {
+        padding: 0 !important;
+
+        div.enrollment-details-container {
+          padding: 16px !important;
+        }
+      }
+    }
+  
     @include media-breakpoint-up(md) {
       .row {
         height: auto;
@@ -91,6 +101,7 @@ $enrolled-passed-fg: #ffffff;
       @include media-breakpoint-down(sm)  {
         width: 100%;
         height: $featureImgMobileHeight;
+        border-radius: 0;
       }
 
       width: $featureImgWidth;
@@ -254,6 +265,7 @@ $enrolled-passed-fg: #ffffff;
     text-align: center;
     color: $brand-darker-bg;
   }
+
 }
 
 .dashboard {
