--- a/frontend/public/scss/cart.scss
+++ b/frontend/public/scss/cart.scss
@@ -71,3 +71,13 @@ div.cart-helptext {
     }
   }
 }
+
+.purchase-block-intro {
+  display: block;
+}
+
+@media only screen and (max-width: 767px) {
+  .purchase-block-intro {
+    display: none;
+  }  
+}
